--- a/src/Web/SalesWeb/Pages/Order/Detail.cshtml
+++ b/src/Web/SalesWeb/Pages/Order/Detail.cshtml
@@ -52,7 +52,7 @@
                 </article>
 
                 <article class="esh-orders_detail-items row">
-                    <section class="esh-orders_detail-item col-12">@Model.OrderDetails.BillingAddress.Country</section>
+                    <section class="esh-orders_detail-item col-12">@Model.OrderDetails.CountryName</section>
                 </article>
             </section>
         }
