--- a/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
@@ -20,6 +20,8 @@
         <link rel="stylesheet" href="~/css/catalog/catalog.component.css" />
         <link rel="stylesheet" href="~/css/basket/basket-status/basket-status.component.css" />
         <link rel="stylesheet" href="~/css/orders/orders.component.css" />
+        <link href="~/lib/select2/css/select2.css" rel="stylesheet" />
+        <link href="~/lib/select2-bootstrap4/select2-bootstrap4.css" rel="stylesheet" />
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"
@@ -109,6 +111,7 @@
         <script src="~/lib/bootstrap/js/bootstrap.js"></script>
         <script src="~/lib/fontawesome-free-5.0.4/js/fontawesome-all.js"></script>
         <script src="~/lib/slick/slick.js"></script>
+        <script src="~/lib/select2/js/select2.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
