add customize name and url in basket

--- a/src/Web/DamaWeb/Pages/Basket/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Index.cshtml
@@ -49,9 +49,19 @@
                         <div class="col-sm-3 form-group row m-0 p-0">
                             <label class="d-inline d-sm-none col-3 col-form-label dama-basket-label">Preço</label>
                             <div class="col-9 dama-basket-item">
-                                <span>
-                                    @item.UnitPrice.ToString("N2") €
-                                </span>
+                                @if (!item.IsFromCustomize)
+                                {
+                                    <span>
+                                        @item.UnitPrice.ToString("N2") €
+                                    </span>
+                                }
+                                else
+                                {
+                                    <span class="small">
+                                        em análise
+                                    </span>
+                                }
+
                             </div>
                         </div>
                         <div class="col-sm-3 form-group row m-0 p-0">
@@ -62,7 +72,19 @@
                             </div>
                         </div>
                         <div class="d-none d-sm-block col-sm-2">
-                            @Math.Round(item.Quantity * item.UnitPrice, 2).ToString("N2") €
+                            @if (!item.IsFromCustomize)
+                            {
+                                <text>
+                                @Math.Round(item.Quantity * item.UnitPrice, 2).ToString("N2") €
+                                </text>
+                            }
+                            else
+                            {
+                                <span class="small">
+                                    em análise
+                                </span>
+                            }
+
                         </div>
                     </div>
                     <div class="col-1 col-sm-1 m-0 p-0">
@@ -83,7 +105,12 @@
                 <a asp-page="/Index" class="dama-basket-link">Adicionar mais produtos</a>
             </div>
             <div class="col text-right esh-basket-item--mark">
-                <span>Total </span>@Model.BasketModel.SubTotal() €
+                @if (!Model.BasketModel.Items.Any(x => x.IsFromCustomize))
+                {
+                    <text>
+                    <span>Total </span>@Model.BasketModel.SubTotal() €                
+                    </text>
+                }
             </div>
         </div>
         <div class="row justify-content-between ml-0 mr-0">
