change email text

--- a/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/SalesWeb/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-md navbar-light pt-sm-3 pb-0 d-none d-sm-flex w-100">
             <a asp-page="/Index" class="navbar-brand">
-                <img src="~/images/logo-sabor.png" width="150" alt="As vendas do marcado" />
+                <img src="~/images/logo-sabor.png" width="150" alt="As vendas do mercado" />
             </a>
             <ul class="navbar-nav ml-auto login-nav">
                 @await Html.PartialAsync("_LoginPartial")
