Order detail with customize item

--- a/src/Web/DamaWeb/Pages/Order/Detail.cshtml
+++ b/src/Web/DamaWeb/Pages/Order/Detail.cshtml
@@ -6,6 +6,14 @@
     ViewData["Title"] = "Detalhe da Encomenda";
 }
 
+<style>
+    .order-customize-colors {
+        width: 20px;
+        height: 20px;
+        display: inline-flex;
+    }
+</style>
+
 <div class="esh-orders_detail">
     <div class="container">
         <h2 class="dama-heading-normal-font">@ViewData["Title"] &nbsp; #@Model.OrderDetails.OrderNumber</h2>
@@ -25,7 +33,7 @@
                     <span class="dama-orders-title-mobile d-sm-none">Data: </span>@Html.DisplayFor(_ => Model.OrderDetails.OrderDate)
                 </section>
                 <section class="esh-orders_detail-item col-12 col-sm-3">
-                    <span class="dama-orders-title-mobile d-sm-none">Total: </span>@Html.DisplayFor(_ => Model.OrderDetails.Total) €
+                    <span class="dama-orders-title-mobile d-sm-none">Total: </span>@(Model.OrderDetails.Total.HasValue ? Model.OrderDetails.Total.Value.ToString("N2") + "€" : "Em análise" )
                 </section>
                 <section class="esh-orders_detail-title col-12 col-sm-3">
                     <span class="dama-orders-title-mobile d-sm-none">Estado: </span>@Model.OrderDetails.Status
@@ -100,7 +108,7 @@
                         <img class="esh-orders_detail-image img-fluid" src="@item.PictureUrl">
                     </section>
                     <section class="esh-orders_detail-item esh-orders_detail-item--middle col-8 col-sm-3">
-                        <span class="d-sm-none">@item.Units x </span>@item.ProductName
+                        <span class="d-sm-none">@item.Units x </span>@(!item.IsCustomize ? item.ProductName : $"Personalização: {item.ProductName}")
                         @if (!string.IsNullOrEmpty(item.CustomizeName))
                         {
                             <br />
@@ -114,14 +122,32 @@
                                 <span class="dama-basket-label">@(EnumHelper<ApplicationCore.Entities.AttributeType>.GetDisplayValue(attr.Type)): @attr.AttributeName </span>
                             }
                         }
+                        @if (item.IsCustomize)
+                        {
+                            <br />
+                            <span class="dama-basket-label">@Html.DisplayNameFor(_ => item.CustomizeDescription) : @item.CustomizeDescription </span>
+                            @if (!string.IsNullOrEmpty(item.CustomizeText))
+                            {
+                                <br />
+                                <span class="dama-basket-label">@Html.DisplayNameFor(_ => item.CustomizeText) : @item.CustomizeText </span>
+                            }
+                            <br />
+                            <span class="dama-basket-label">@Html.DisplayNameFor(_ => item.CustomizeColors) :</span>
+                            var colors = item.CustomizeColors.Split(',');
+                            foreach (var rgb in colors)
+                            {
+                                var rgbText = rgb.Replace(';', ',');
+                                <div class="order-customize-colors" style='background-color: @rgbText'>&nbsp;</div>
+                            }
+                        }
                         <span class="d-sm-none">
                             <br />
                             @Math.Round(item.Units * item.UnitPrice, 2).ToString("N2") €
                         </span>
                     </section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle d-none d-sm-block col-sm-2 text-nowrap">@item.UnitPrice.ToString("N2") €</section>
+                    <section class="esh-orders_detail-item esh-orders_detail-item--middle d-none d-sm-block col-sm-2 text-nowrap">@(item.UnitPrice > 0 ? item.UnitPrice.ToString("N2") + " €" : "")</section>
                     <section class="esh-orders_detail-item esh-orders_detail-item--middle d-none d-sm-block col-sm-1">@item.Units</section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle d-none d-sm-block col-sm-2 text-nowrap">@Math.Round(item.Units * item.UnitPrice, 2).ToString("N2") €</section>
+                    <section class="esh-orders_detail-item esh-orders_detail-item--middle d-none d-sm-block col-sm-2 text-nowrap">@(item.UnitPrice > 0 ? Math.Round(item.Units * item.UnitPrice, 2).ToString("N2") + " €" : "em análise")</section>
                 </article>
                 <hr class="basket-hr" />
             }
@@ -148,7 +174,7 @@
             <article class="esh-orders_detail-titles esh-basket-titles--clean row">
                 <section class="esh-orders_detail-title d-none d-sm-block col-sm-7"></section>
                 <section class="esh-orders_detail-title col-7 col-sm-3 text-sm-right">TOTAL</section>
-                <section class="esh-orders_detail-item esh-orders_detail-item--mark col-4 col-sm-2 text-nowrap text-right">@Model.OrderDetails.Total €</section>
+                <section class="esh-orders_detail-item esh-orders_detail-item--mark col-4 col-sm-2 text-nowrap text-right">@(Model.OrderDetails.Total.HasValue ? Model.OrderDetails.Total + " €" : "em análise")</section>
             </article>
         </section>
     </div>
