--- a/src/Web/DamaWeb/Pages/Order/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Order/Index.cshtml
@@ -48,6 +48,10 @@
                                 @Html.DisplayFor(modelItem => item.Total) €
                             </text>
                         }
+                        else
+                        {
+                            <small>em análise</small>
+                        }
 
                     </section>
                     <section class="esh-orders-item col-12 col-sm-2">
