--- a/src/Web/Backoffice/Pages/ProductType/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Edit.cshtml
@@ -13,7 +13,7 @@
 
     <form method="post" enctype="multipart/form-data">
         <div class="col-md-4">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProductTypeModel.Code" class="control-label"></label>
                 <input asp-for="ProductTypeModel.Code" class="form-control" />
